# CurveFitting

./: .gitignore  CMakeLists.txt  README.md  main.cpp
app/: CurveFitting.cpp  PoseEstimation.cpp  main.cpp
include/: GLogHelper.h  ceresSolver.h  commom_include.h  g2oSolver.h  optimization.h
include/pose/: initialize.h  poseCeres.h  poseG2o.h  poseGN.h
scripts/: data.txt  display.py  display.sh  error-GN.txt  error-LM-N.txt  error-LM.txt  error-RGN.txt  error-RLM.txt  result.txt
src/: GLogHelper.cpp  ceresSolver.cpp  g2oSolver.cpp  initialize.cpp  optimization.cpp  poseCeres.cpp  poseG2o.cpp  poseGN.cpp
